--- a/style.css
+++ b/style.css
@@ -5,22 +5,22 @@
 }
 
 :root {
-	--color-gray-50: #f8fafc;
-	--color-gray-100: #f1f5f9;
-	--color-gray-200: #e2e8f0;
-	--color-gray-300: #cbd5e1;
-	--color-gray-400: #94a3b8;
-	--color-gray-500: #64748b;
-	--color-gray-600: #475569;
-	--color-gray-700: #334155;
-	--color-gray-800: #1e293b;
-	--color-gray-900: #0f172a;
-	--color-green-100: #04d361;
-	--color-green-200: #1b873f;
-	--color-purple-100: #996dff;
-	--color-purple-200: #7c3aed;
-	--color-white: #ffffff;
-	--color-orange: #fba94c;
+  --color-gray-50: #f8fafc;
+  --color-gray-100: #f1f5f9;
+  --color-gray-200: #e2e8f0;
+  --color-gray-300: #cbd5e1;
+  --color-gray-400: #94a3b8;
+  --color-gray-500: #64748b;
+  --color-gray-600: #475569;
+  --color-gray-700: #334155;
+  --color-gray-800: #1e293b;
+  --color-gray-900: #0f172a;
+  --color-green-100: #04d361;
+  --color-green-200: #1b873f;
+  --color-purple-100: #996dff;
+  --color-purple-200: #7c3aed;
+  --color-white: #ffffff;
+  --color-orange: #fba94c;
 }
 
 html,
@@ -48,4 +48,28 @@ section .inner {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--color-purple-200);
+}
+
+.title-price {
+  margin-top: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 37px;
+  color: var(--color-gray-800);
+}
+
+.price {
+  font-size: 18px;
+  line-height: 27px;
+  color: var(--color-gray-800);
+}
+
+.price strong {
+  
 }
