--- a/style.css
+++ b/style.css
@@ -71,5 +71,23 @@ section .inner {
 }
 
 .price strong {
-  
+  font-size: 20px;
+  line-height: 30px;
+}
+
+button {
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 24px;
+  width: 100%;
+  border: 1px solid var(--color-gray-800);
+  border-radius: 4px;
+  margin-top: 16px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: var(--color-gray-800);
+  cursor: pointer;
 }
