feat(style.css): icon styles

--- a/style.css
+++ b/style.css
@@ -120,3 +120,13 @@ li span {
   letter-spacing: 0.06em;
   color: var(--color-gray-600);
 }
+
+li i.ph-check {
+  font-size: 20px;
+  color: var(--color-green-200);
+}
+
+li i.ph-info {
+  font-size: 16px;
+  color: var(--color-gray-900);
+}
