--- a/style.css
+++ b/style.css
@@ -29,6 +29,12 @@ body {
   background-color: var(--color-gray-50);
 }
 
+.pricing-table {
+  dislay: grid;
+  gap: 24px;
+  padding: 24px;
+}
+
 section {
   width: 320px;
   margin: auto;
@@ -129,4 +135,18 @@ li i.ph-check {
 li i.ph-info {
   font-size: 16px;
   color: var(--color-gray-900);
+}
+
+.enterprise .title {
+  font-size: 32px;
+  line-height: 49px;
+}
+
+.enterprise button {
+  margin-top: 32px;
+}
+
+.enterprise ul {
+  padding-top: 32px;
+  margin-top: 32px;
 }
