feat(style.css): making responsive

--- a/style.css
+++ b/style.css
@@ -241,15 +241,12 @@ section {
     align-items: center;
     justify-content: center;
     padding: 0px;
-    gap: 32px;
 
     position: absolute;
     min-width: 1216px;
     min-height: 454px;
     left: 7%;
     top: 20%;
-
-    //border: 1px solid red;
   }
 
   section .inner {
@@ -272,6 +269,7 @@ section {
 
   ul {
     margin-top: 32px;
+    padding-top: 32px;
   }
 
   .title {
@@ -292,6 +290,10 @@ section {
   }
 
   .enterprise ul {
-    margin-top: 23px;
+    margin-top: 30px;
+  }
+
+  .enterprise .title {
+    margin-top: 0;
   }
 }
